# Phyzzy

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  math_types.h  physics_types.h  types.h  vector_math.h
include/phyzzy/: physics.c  physics.h  physicsbody.h  physicsbody_physics.h
src/: physics copy.h  physics.c  physicsbody.cpp  physicsbody_physics.c
